--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 ctx.arc(getPos(1600 - center[0], w), getPos(700 - center[1], h), 5*5/getScale(), 0, 2 * Math.PI);
                 ctx.stroke();
                 ctx.beginPath();
-                ctx.arc(getPos(1600 - center[0], w), getPos(700 - center[1], h), Math.max(0, cur.b1[0]/cur.b1[1]) * 5*5/getScale(), 0, 2 * Math.PI);
+                ctx.arc(getPos(1600 - center[0], w), getPos(700 - center[1], h), Math.min(1, Math.max(0, cur.b1[0]/cur.b1[1])) * 5*5/getScale(), 0, 2 * Math.PI);
                 ctx.fill();
 
                 ctx.fillStyle = "blue";
@@ -158,7 +158,7 @@
                 ctx.arc(getPos(2600 - center[0], w), getPos(1700 - center[1], h), 5*5/getScale(), 0, 2 * Math.PI);
                 ctx.stroke();
                 ctx.beginPath();
-                ctx.arc(getPos(2600 - center[0], w), getPos(1700 - center[1], h), Math.max(0, cur.b2[0]/cur.b2[1]) * 5*5/getScale(), 0, 2 * Math.PI);
+                ctx.arc(getPos(2600 - center[0], w), getPos(1700 - center[1], h), Math.min(1, Math.max(0, cur.b2[0]/cur.b2[1])) * 5*5/getScale(), 0, 2 * Math.PI);
                 ctx.fill();
 
                 ctx.fillStyle = "white";
